# catkin_ws

devel/: .catkin  local_setup.sh
devel/include/yamnet_coral/: AudioClassification.h
devel/lib/pkgconfig/: robot_bringup.pc  robot_exploration.pc  robot_odometry.pc  robot_perception.pc  robot_semantic_map.pc  robot_yolo.pc  uart_bridge.pc  web_bridge.pc  yamnet_coral.pc
devel/share/robot_bringup/cmake/: robot_bringupConfig.cmake
devel/share/robot_exploration/cmake/: robot_explorationConfig.cmake
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: base_local_planner.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
src/robot_bringup/launch/: autonomous.launch  bringup.launch  calibration.launch  move_base.launch
src/robot_exploration/: CMakeLists.txt  explorer.py  package.xml
src/robot_odometry/: CMakeLists.txt  package.xml
src/robot_odometry/launch/: odom.launch
src/robot_odometry/scripts/: odom_node.py
src/robot_perception/: CMakeLists.txt  package.xml
src/robot_semantic_map/: CMakeLists.txt  package.xml
src/robot_yolo/: CMakeLists.txt  package.xml
src/robot_yolo/launch/: yolo.launch
src/robot_yolo/scripts/: person_detector_node.py
src/uart_bridge/: CMakeLists.txt  package.xml
src/uart_bridge/scripts/: uart_bridge.py
src/web_bridge/: CMakeLists.txt
src/web_bridge/scripts/: robot_gateway.py
src/yamnet_coral/: CMakeLists.txt  package.xml
src/yamnet_coral/msg/: AudioClassification.msg
src/yamnet_coral/scripts/: coral_yamnet.py  coral_yamnet_node.py
(+20 files in other folders)
