<?xml version="1.0"?>
<package format="2">
  <name>robot_yolo</name>
  <version>1.0.0</version>
  <description>YOLOv8 TensorRT person detection node</description>
  <maintainer email="sleepy@rover.local">sleepy</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>usb_cam</depend>
</package>
